@@ -1,7 +1,7 @@
-{"CS 207-2018-1 Discrete Structures": ["Tutorial 1. Propositions and Predicates."]}
-{"CS 213-2018-1 Data Structures and Algorithms": ["Agenda"]}
-{"EE 101-2018-1-S5  Introduction to Electrical and Electronics Circuits": []}
 {"CS 215-2018-1 Data Analysis and Interpretation": ["Class website for the first half", "Discussion Forum for CS 215", "Slides: Course overview", "Slides: Descriptive Statistics"]}
 {"EE 101-2018-1 Introduction to Electrical and Electronics Circuits": []}
-{"CS 251-2018-1 Software Systems Lab": []}
 {"CS 293-2018-1 Data Structures and Alogrithms Lab": []}
+{"CS 207-2018-1 Discrete Structures": ["Tutorial 1. Propositions and Predicates."]}
+{"EE 101-2018-1-S5  Introduction to Electrical and Electronics Circuits": []}
+{"CS 213-2018-1 Data Structures and Algorithms": ["Agenda"]}
+{"CS 251-2018-1 Software Systems Lab": []}
