@@ -2,3 +2,6 @@ CS 207-2018-1 Discrete Structures
 CS 213-2018-1 Data Structures and Algorithms
 CS 215-2018-1 Data Analysis and Interpretation
 CS 251-2018-1 Software Systems Lab
+CS 293-2018-1 Data Structures and Alogrithms Lab
+EE 101-2018-1 Introduction to Electrical and Electronics Circuits
+EE 101-2018-1-S5  Introduction to Electrical and Electronics Circuits
